# xtr

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile.toml  README.md  build.rs  cbindgen.toml
benches/: xtr.rs
cmake/: Config.cmake.in  xtrConfig.cmake.in  xtrConfigTargets.cmake.in  xtrTargets-debug.cmake.in  xtrTargets-release.cmake.in  xtrTargets.cmake.in
examples/: client-start-stop.rs  client.rs  packed-values.rs  server.rs
examples/cpp/: CMakeLists.txt  client-demo.cpp  client-start-stop.cpp
include/xtr/: xtr.h  xtr.hpp
libxtr/: CMakeLists.txt  Cargo.toml
libxtr/examples/: CMakeLists.txt  client-demo.cpp  server-demo.cpp
libxtr/include/xtr/: xtr.h
libxtr/src/: lib.rs
src/: client.rs  ffi.rs  lib.rs  packet.rs  server.rs  utils.rs  values.rs
xtr/: Cargo.toml
xtr/examples/: client.rs  packed-values.rs  server.rs
xtr/src/: client.rs  lib.rs  packet.rs  server.rs  session.rs  values.rs  xx.rs
