[package]
name = "xtr"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
bytes = "1"
crossbeam = "0.8"
env_logger = "0.10"
futures = "0.3"
fv-common = { git = "http://git.full-v.com/fullv/fv-common.git", optional = true }
libc = "0.2"
log = "0.4"
paste = "1"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[features]
default = []
fullv = ["fv-common"]
