[package]
name = "xtr"
version = "1.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
bytes = "1"
env_logger = "0.11"
fv-common = { git = "http://git.full-v.com/fullv/fv-common.git", optional = true }
libc = "0.2"
log = "0.4"
paste = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[features]
default = []
fullv = ["dep:fv-common", "fv-common/async", "fv-common/gstreamer"]
