[package]
name = "xtr"
version = "1.1.6"
edition = "2021"
description = "eXtensible Transmission Runtime library"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
FileDescription = "eXtensible Transmission Runtime library"
LegalCopyright = "Copyright © 2025 Varphone Wong"

[dependencies]
bitflags = "2"
bytes = "1"
env_logger = "0.11"
fv-common = { git = "http://git.full-v.com/fullv/fv-common.git", tag="v5.3.1", optional = true }
libc = "0.2"
log = "0.4"
paste = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.20"

[features]
default = []
fullv = ["dep:fv-common", "fv-common/async", "fv-common/gstreamer"]