[package]
name = "libxtr"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtr = { path = "../xtr" }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["full"] }

[lib]
name = "xtr"
crate_type = ["cdylib"]
