[package]
name = "xtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
crossbeam = "0.8.1"
futures = "0.3.21"
libc = "0.2.123"
log = "0.4.16"
paste = "1.0.7"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.9.0"
