[package]
name = "xtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
bytes = "1"
crossbeam = "0.8"
futures = "0.3"
fv-common = { git = "http://git.full-v.com/fullv/fv-common.git", optional = true }
libc = "0.2"
log = "0.4"
paste = "1"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
fullv = ["fv-common"]
