[package]
name = "xtr"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
bytes = "1"
crossbeam = "0.8"
futures = "0.3"
fv-common = { git = "https://github.com/varphone/fv-common.git", optional = true }
libc = "0.2"
log = "0.4"
paste = "1"
pin-project-lite = "0.2"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
fullv = ["fv-common"]
